# Bearing-RUL-OrderTransformer

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/features/: train_full_order_domain.parquet
artifacts/runs/lobo_order_domain_nested/: nested_lobo_summary.json  oof_predictions_honest.csv  oof_predictions_raw.csv
artifacts/runs/per_run_tail_nested/: tail_predictions_with_actual.csv  tail_summary.json
docs/: data.md  experiments.md  phm_pipeline_data_features.md
figures/results/: result_figure_index.md
scripts/: evaluate_split.py  extract_features.py  make_hero_gif.py  make_order_domain_features.py  make_overview_figure.py  make_poster_figures.py  make_result_figures.py  postprocess_temporal_consistency.py  predict.py  run_lobo.py  run_pronostia_order_test.py  run_tail_validation.py  train.py
src/phm_pipeline/: __init__.py  config.py  data.py  features.py  losses.py  model.py  training.py
tests/: test_data.py  test_features.py  test_losses.py  test_methodology.py  test_model.py  test_training_transforms.py
