[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phm-korea-rul"
version = "0.1.0"
description = "End-to-end RUL pipeline for the KSPHM-KIMM bearing degradation challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
  "nptdms>=1.7",
  "pyarrow>=14.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

