[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phm-korea-rul"
version = "0.1.0"
description = "End-to-end RUL pipeline for the KSPHM-KIMM bearing degradation challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
  "nptdms>=1.7",
  "pyarrow>=14.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# CLI scripts must extend sys.path (and set the matplotlib backend) before
# importing the package, so module-level imports are intentionally not at the top.
"scripts/*" = ["E402"]

